# Keyboard-Simulator

./: .gitignore  README.md  TextExpansionKeyboard.sln  TextExpansionKeyboard.vcxproj  install.bat
.github/workflows/: build.yml
config/: dictionary.json
docs/: deployment_guide.md  user_manual.md
src/: ClassFactory.cpp  ClassFactory.h  ExpansionDictionary.cpp  ExpansionDictionary.h  Globals.cpp  Globals.h  InputBuffer.cpp  InputBuffer.h  Register.cpp  Register.h  TextExpansionKeyboard.def  TextService.cpp  TextService.h  dllmain.cpp
tests/: CMakeLists.txt  test_main.cpp
